add Hilt and Room, store current temperature to database (still need to access and display it on home fragment) removed @JvmField annotations (unneeded since it is all Kotlin now)
NOTE: For now, just doing database transactions on main thread. We
will need to refactor that to occur on background threads using
coroutines. :)

ANOTHER NOTE: For now, also only persisting current temperature, we
will definitely want to expand on that.

YET ANOTHER NOTE: It'd be cool to add a repository layer (for now
directly calling the DAO).  Then we could have the repository layer
handle deciding when to fetch new data vs. using what we already
have persisted.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
+apply plugin: 'dagger.hilt.android.plugin'
 
 def apikeyPropertiesFile = rootProject.file("apikey.properties")
 def apikeyProperties = new Properties()
@@ -15,6 +17,12 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         buildConfigField("String", "OWMAPIKEY", apikeyProperties['apikey'])
+
+        kapt {
+            arguments {
+                arg("room.schemaLocation", "$projectDir/schemas")
+            }
+        }
     }
     buildTypes {
         release {
@@ -46,6 +54,13 @@ dependencies {
     implementation 'com.jakewharton.timber:timber:4.7.1'
     implementation 'com.google.android.gms:play-services-location:17.1.0'
     implementation 'com.google.code.gson:gson:2.8.6'
+
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+
+    implementation "androidx.room:room-runtime:2.2.5"
+    kapt "androidx.room:room-compiler:2.2.5"
+
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
