--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,6 +82,7 @@ dependencies {
     // Database
     implementation "androidx.room:room-runtime:2.2.5"
     kapt "androidx.room:room-compiler:2.2.5"
+    implementation 'com.facebook.stetho:stetho:1.5.1'
 
     // Testing
     testImplementation 'junit:junit:4.12'
