--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,9 @@ android {
                 arg("room.schemaLocation", "$projectDir/schemas")
             }
         }
+        vectorDrawables {
+            useSupportLibrary true
+        }
     }
     buildTypes {
         release {
@@ -40,12 +43,19 @@ android {
     }
     kotlinOptions {
         jvmTarget = "1.8"
+        useIR = true
     }
     buildFeatures {
         compose true
     }
     composeOptions {
         kotlinCompilerExtensionVersion composeVersion
+        kotlinCompilerVersion '1.5.21'
+    }
+    packagingOptions {
+        resources {
+            excludes += '/META-INF/{AL2.0,LGPL2.1}'
+        }
     }
 
 }
@@ -79,6 +89,9 @@ dependencies {
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.14.0"
     implementation "com.google.accompanist:accompanist-permissions:0.14.0"
 
+    // Navigation
+    implementation "androidx.navigation:navigation-compose:2.4.0-alpha10"
+
     // Utilities
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
@@ -99,6 +112,9 @@ dependencies {
 
     // Dependency Injection
     implementation "com.google.dagger:hilt-android:$hilt_version"
+    implementation "androidx.compose.ui:ui-tooling-preview:$composeVersion"
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$composeVersion"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
     implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
     kapt 'androidx.hilt:hilt-compiler:1.0.0'
