--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,6 +91,7 @@ dependencies {
 
     // Navigation
     implementation "androidx.navigation:navigation-compose:2.4.0-alpha10"
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0-alpha03'
 
     // Utilities
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
