--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,7 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0'
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
+    implementation "androidx.compose.material:material-icons-extended:$composeVersion"
 
     // Compose
     implementation "androidx.compose.runtime:runtime:$composeVersion"
@@ -86,8 +87,11 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.4.0-rc01"
     implementation "androidx.activity:activity-compose:1.3.1"
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-rc01"
-    implementation "com.google.accompanist:accompanist-systemuicontroller:0.14.0"
-    implementation "com.google.accompanist:accompanist-permissions:0.14.0"
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.19.0"
+    implementation "com.google.accompanist:accompanist-permissions:0.19.0"
+    implementation "com.google.accompanist:accompanist-pager:0.19.0"
+    implementation "com.google.accompanist:accompanist-pager-indicators:0.19.0"
+
 
     // Navigation
     implementation "androidx.navigation:navigation-compose:2.4.0-alpha10"
