--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,13 +92,13 @@ dependencies {
     implementation "com.google.accompanist:accompanist-pager:0.19.0"
     implementation "com.google.accompanist:accompanist-pager-indicators:0.19.0"
 
-
     // Navigation
     implementation "androidx.navigation:navigation-compose:2.4.0-alpha10"
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0-alpha03'
 
     // Utilities
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'androidx.work:work-runtime-ktx:2.7.0'
 
     // Networking
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -119,10 +119,12 @@ dependencies {
     implementation "com.google.dagger:hilt-android:$hilt_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$composeVersion"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
+    implementation 'androidx.hilt:hilt-work:1.0.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$composeVersion"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
     implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
     kapt 'androidx.hilt:hilt-compiler:1.0.0'
+
 
     // Database
     implementation "androidx.room:room-runtime:2.2.5"
