--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,10 @@ buildscript {
     }
 }
 
+plugins {
+    id "org.jlleitschuh.gradle.ktlint" version "11.0.0"
+}
+
 allprojects {
     repositories {
         google()
